<resources>
    <string name="app_name">The Air cafe</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="img">img</string>
    <string name="name">Name</string>
    <string name="phone_number">phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="upload_image">upload image</string>
    <string name="or_with">or with</string>
    <string name="facebook">Facebook</string>
    <string name="already_havve_account_login">Already have Account ? Login</string>
    <string name="google">Google</string>
    <string name="title_activity_home_page">home_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>